fix: небольшие исправления + общий обработчик ошибок для контроллера